# energinetdk-semantic-search

./: README.md  pyproject.toml  requirements.txt
src/: gui.py
src/energinetdk/: cli.py  config.py  data.py  embeddings.py  pdf.py  spider.py
